Inside io.github.kamilszewc.diskcooker package, updated deps