@@ -1,4 +1,4 @@
-package io.github.kamilszewc;
+package io.github.kamilszewc.diskcooker;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -9,15 +9,14 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.Collection;
-import java.util.Random;
 
 /**
- * RandomByteFileGenerator class
+ * RandomTextFileGenerator class
  */
 @Builder
 @AllArgsConstructor
 @NoArgsConstructor
-public class RandomByteFileGenerator implements FileGenerator {
+public class RandomTextFileGenerator implements FileGenerator {
 
     @Builder.Default
     private Integer size = 1024;
@@ -27,10 +26,8 @@ public class RandomByteFileGenerator implements FileGenerator {
 
     @Override
     public void generate(Path path) throws IOException {
-        Random random = seed == null ? new Random() : new Random(seed);
-        byte[] bytes = new byte[size];
-        random.nextBytes(bytes);
-        Files.write(path, bytes, StandardOpenOption.CREATE);
+        String generatedString = seed == null ? RandomTextGenerator.generate(size) : RandomTextGenerator.generate(size, seed);
+        Files.writeString(path, generatedString, StandardOpenOption.CREATE);
     }
 
     @Override
